--- a/package.json
+++ b/package.json
@@ -5,10 +5,18 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.13",
         "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.7.2",
+        "laravel-vite-plugin": "^0.7.0",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
-        "vite": "^4.0.0"
+        "postcss": "^8.4.19",
+        "tailwindcss": "^3.2.4",
+        "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-svelte": "^0.8.0",
+        "@sveltejs/vite-plugin-svelte": "^1.2.0",
+        "svelte": "^3.55.1"
     }
 }
