--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
-        "@inertiajs/inertia": "^0.11.1",
-        "@inertiajs/inertia-svelte": "^0.8.0",
+        "@inertiajs/svelte": "^1.0.0",
         "@sveltejs/vite-plugin-svelte": "^1.2.0",
         "svelte": "^3.55.1"
     }
