--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -15,7 +15,7 @@
 		"formulahendry.auto-close-tag",
 		"formulahendry.auto-rename-tag",
 		"christian-kohler.path-intellisense",
-		"EditorConfig.EditorConfig"
+		"EditorConfig.EditorConfig",
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": [
